# fiap-classification-model

./: .gitignore  README.md  main.py  pyproject.toml
fiap_classification_model/extractor/: extract_data.py
fiap_classification_model/ml_models/: classification_model.py
fiap_classification_model/notebook/: classification.ipynb
fiap_classification_model/utils/: ml_utils.py
