[tool.poetry]
name = "fiap-classification-model"
version = "0.1.0"
description = ""
authors = ["jdbernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"